kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-sensor-service
spec:
  selector:
    app: sensor-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
