kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivebox-sensor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/hsts: "true"  
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"  
    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    nginx.ingress.kubernetes.io/hsts-preload: "true"
    kubernetes.io/tls-acme: "true" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hivebox.local
      secretName: tls-secret 
  rules:
    - host: hivebox.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hivebox-sensor-service
                port:
                  number: 80
